trying to make web version a little easier to use on a phone

--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Come and Gone</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=.4, maximum-scale=1, user-scalable=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
 <body>
     <p id='terminal'></p>
     <div id='prompt-wrapper'>
-        <input id='prompt' type='text' spellcheck="false">
+        <input id='prompt' type='text' spellcheck="false" autocorrect="off" autocapitalize="off">
         <!-- <span id='promptCopy'> </span> -->
     </div>
 
