--- a/web/index.html
+++ b/web/index.html
@@ -8,15 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
 <body>
-    <p id='terminal'></p>
-    <div id='prompt-wrapper'>
-        <input id='prompt' type='text' spellcheck="false" autocorrect="off" autocapitalize="off">
-        <!-- <span id='promptCopy'> </span> -->
-    </div>
-
+    <pre id='terminal'></pre>
+    <input id='prompt' type='text' spellcheck="false" autocorrect="off" autocapitalize="off">
+    <script src="ansi_up.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>var socket = io();</script>
     <script src="main.js"></script>
-    
 </body>
-</html>
+</html
